tests/vertical-slice/reject/match_i32_literal_nonexhaustive.hew
// REJECT: literal-only i32 matches are over an open integer domain and must
// include a catch-all arm.
fn main() -> i64 {
    let x: i32 = 2;
    match x {
        0 => 0,
        1 => 1,
    }
    0
}
